force-app/main/default/objects/Income_Budget__c/Income_Budget__c.object-meta.xml
<CustomObject>
    <description>To set and track financial goals for income, including grouped recurring donations.</description>
    <label>Income Budget</label>
    <nameField>
        <label>Income Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>