force-app/main/default/objects/Income_Budget__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The category or source of the income (e.g., Facebook Donations, Direct Donations, Youth Program)</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time Donations</fullName>
            </value>
            <value>
                <fullName>Recurring Donation</fullName>
            </value>
            <value>
                <fullName>Fairs</fullName>
            </value>
            <value>
                <fullName>Sadaka Fitre</fullName>
            </value>
            <value>
                <fullName>Matchings</fullName>
            </value>
            <value>
                <fullName>Weekend School</fullName>
            </value>
            <value>
                <fullName>Youth Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>HSO</fullName>
                <isActive>false</isActive>
                <label>HSO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>