force-app/main/default/objects/Income_Budget__c/fields/Planned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Planned_Amount__c</fullName>
    <description>The total amount of income planned for the fiscal year.</description>
    <label>Planned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>