force-app/main/default/objects/Income_Budget__c/fields/Total_Amount_Left_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Left_to_Receive__c</fullName>
    <description>The remaining amount of income to be received, calculated as Planned Amount - Total Amount Received.</description>
    <formula>Planned_Amount__c - Total_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Left to Receive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>