force-app/main/default/objects/Income_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Planned_Amount__c</columns>
    <columns>Total_Amount_Received__c</columns>
    <columns>Total_Amount_Left_to_Receive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>